# mash

./: Cargo.toml  Dockerfile  LICENSE  README.md  _config.yml  fly.toml
.github/workflows/: fly-deploy.yml
examples/: hello_world.rs  views.rs
src/: handlers.rs  lib.rs  main.rs  views.rs
templates/: form.html  index.html
