[package]
name = "hats_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmx = "0.1"          # Optional htmx helper (not a must, you can use plain htmx)
axum = "0.6"          # Web framework
tera = "1.17"         # Templating engine
tokio = { version = "1", features = ["full"] }     # Asynchronous runtime
hyper = { version = "0.14", features = ["full"] }  # HTTP server
serde = { version = "1", features = ["derive"] }   # For serializing form data

